crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__monte-carlo_by_year_200x55.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
assertion_line: 44
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                                                                                                      
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                                                                                          full.toml ● 
┴──────────┴┴────────┴┴─────────┴╯       ╰┴──────┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
╭ Tools ────────────╮╭ Assumptions ───────────────────╮╭ Markets · money lasts in 99.7% of 1,000 ──────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  Roth Conversions ││                                ││  Markets         Ends with  Short in                                                                                                          │
│  SSA Benefits     ││▌ Money lasts  99.7% of 1,000   ││  As planned          2.09M     never                                                                                                          │
│▏ Monte Carlo      ││  Success      Never short      ││▏ 90th percentile     3.41M     never                                                                                                          │
│  Historical       ││  Draw from    The assumptions  ││  75th percentile     2.74M     never                                                                                                          │
│                   ││  Trials       1,000 · seed 42  ││  50th percentile     2.06M     never                                                                                                          │
│                   ││  Stocks       6% ± 16%         ││  25th percentile     1.41M     never                                                                                                          │
│                   ││  Bonds        4% ± 6%          ││  10th percentile      859k     never                                                                                                          │
│                   ││  Cash         2.5% ± 1%        ││  Worst                   0 2063 (88)                                                                                                          │
│                   ││  Inflation    2.5% ± 1.5%      │╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
│                   ││  No mix       cash, brokerage, │╭ By Year · today's dollars ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                   ││                                ││  Year    10th   25th   50th   75th   90th  Funded                                                                                            ▲│
│                   ││                                ││▏ 2026   1.07M  1.07M  1.07M  1.07M  1.07M    100%                                                                                            █│
│                   ││                                ││  2027   1.13M  1.13M  1.14M  1.15M  1.16M    100%                                                                                            █│
│                   ││                                ││  2028   1.19M  1.20M  1.23M  1.25M  1.27M    100%                                                                                            █│
│                   ││                                ││  2029   1.25M  1.28M  1.31M  1.34M  1.37M    100%                                                                                            █│
│                   ││                                ││  2030   1.32M  1.35M  1.39M  1.44M  1.48M    100%                                                                                            █│
│                   ││                                ││  2031   1.38M  1.43M  1.48M  1.55M  1.59M    100%                                                                                            █│
│                   ││                                ││  2032   1.55M  1.61M  1.67M  1.74M  1.80M    100%                                                                                            █│
│                   ││                                ││  2033   1.62M  1.69M  1.77M  1.84M  1.91M    100%                                                                                            █│
│                   ││                                ││  2034   1.69M  1.77M  1.86M  1.95M  2.03M    100%                                                                                            █│
│                   ││                                ││  2035   1.77M  1.86M  1.96M  2.05M  2.15M    100%                                                                                            █│
│                   ││                                ││  2036   1.86M  1.94M  2.06M  2.17M  2.27M    100%                                                                                            █│
│                   ││                                ││  2037   1.82M  1.92M  2.05M  2.18M  2.30M    100%                                                                                            █│
│                   ││                                ││  2038   1.77M  1.87M  2.01M  2.16M  2.30M    100%                                                                                            █│
│                   ││                                ││  2039   1.72M  1.83M  1.98M  2.14M  2.32M    100%                                                                                            █│
│                   ││                                ││  2040   1.66M  1.79M  1.94M  2.13M  2.32M    100%                                                                                            █│
│                   ││                                ││  2041   1.60M  1.74M  1.91M  2.11M  2.31M    100%                                                                                            █│
│                   ││                                ││  2042   1.57M  1.72M  1.91M  2.11M  2.32M    100%                                                                                            █│
│                   ││                                ││  2043   1.54M  1.71M  1.92M  2.14M  2.35M    100%                                                                                            █│
│                   ││                                ││  2044   1.50M  1.69M  1.92M  2.16M  2.39M    100%                                                                                            █│
│                   ││                                ││  2045   1.47M  1.67M  1.91M  2.16M  2.42M    100%                                                                                            █│
│                   ││                                ││  2046   1.43M  1.65M  1.90M  2.17M  2.46M    100%                                                                                            █│
│                   ││                                ││  2047   1.39M  1.62M  1.88M  2.19M  2.50M    100%                                                                                            █│
│                   ││                                ││  2048   1.36M  1.60M  1.88M  2.20M  2.54M    100%                                                                                            █│
│                   ││                                ││  2049   1.33M  1.58M  1.88M  2.22M  2.58M    100%                                                                                            █│
│                   ││                                ││  2050   1.31M  1.55M  1.88M  2.23M  2.61M    100%                                                                                            █│
│                   ││                                ││  2051   1.28M  1.53M  1.87M  2.24M  2.63M    100%                                                                                            █│
│                   ││                                ││  2052   1.25M  1.52M  1.86M  2.26M  2.65M    100%                                                                                            █│
│                   ││                                ││  2053   1.21M  1.50M  1.86M  2.28M  2.68M    100%                                                                                            █│
│                   ││                                ││  2054   1.17M  1.49M  1.85M  2.29M  2.72M    100%                                                                                            ║│
│                   ││                                ││  2055   1.12M  1.46M  1.84M  2.32M  2.74M    100%                                                                                            ║│
│                   ││                                ││  2056   1.11M  1.46M  1.86M  2.34M  2.81M    100%                                                                                            ║│
│                   ││                                ││  2057   1.11M  1.46M  1.87M  2.37M  2.86M    100%                                                                                            ║│
│                   ││                                ││  2058   1.09M  1.44M  1.89M  2.39M  2.89M    100%                                                                                            ║│
│                   ││                                ││  2059   1.08M  1.44M  1.90M  2.42M  2.92M    100%                                                                                            ║│
│                   ││                                ││  2060   1.06M  1.43M  1.91M  2.46M  2.98M    100%                                                                                            ║│
│                   ││                                ││  2061   1.04M  1.42M  1.92M  2.49M  3.05M    100%                                                                                            ║│
│                   ││                                ││  2062   1.02M  1.43M  1.94M  2.51M  3.08M    100%                                                                                            ▼│
│                   │╰────────────────────────────────╯╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╰───────────────────╯Random markets from the assumptions or from history; the same seed draws the same markets. Today's dollars.                                                                        
 ↑↓ assumption  ⏎ edit  ⇥ pane  v view  ctrl-s save  r reload  q quit  ctrl-↓ tab  n toggle dollars                                                                                  : commands  ? help
